--- a/style.css
+++ b/style.css
@@ -1,14 +1,33 @@
-#rock, #paper, #scissors {
-    font-size: 5rem;
+.btn {
+    font-size: 3.5rem;
     width: 150px;
     height: 150px;
 }
 
-.chosen {
-    background-color: lightgreen;
+.another-round {
+    display: none;
 }
 
-.others {
-    opacity: 0.5;
-    background-color: lightgray;
+.choices {
+    text-align: center;
+}
+
+.sign {
+    font-size: 3.5rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.score {
+    display: flex;
+}
+
+.playerScore, .botScore {
+    font-size: 1.75rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.result {
+    display: flex;
 }
